base/gitolite/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitolite
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
