base/gitolite/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitolite
spec:
  hosts:
    - gitolite.k.seankhliao.com
  gateways:
    - gitolite
  http:
    - route:
        - destination:
            host: gitolite.gitolite.svc.cluster.local
            port:
              number: 80
